# rastafari

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.bkp  .gitlab.ci.yml  .pre-commit-config.yaml  CHANGES.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: build_wheels.yml
src/rastafari/: __init__.py  core.pyi
tests/: test_core.py  test_rastafari.py
