[build-system]
requires = ["setuptools>=61.0", "Cython"]
build-backend = "setuptools.build_meta"

[tool.check-manifest]
ignore = [
  ".gitlab-ci.yml",
  "src/rastafari/*.c",
]

[tool.coverage.run]
source = ["rastafari"]
branch = true

[tool.mypy]
strict = true
exclude = ['^setup\.py$']

[tool.pytest.ini_options]
filterwarnings = ["error"]

[project]
name = "rastafari2"  # This is the name used on PyPI
version = "0.4.1" # Same version as in __init__.py