[metadata]
name = rastafari
version = attr: rastafari.__version__
author = Eef van Dongen, David Segersson
author_email = foluftadmin@smhi.se
description = Rasterize vector features to grids
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.smhi.se/foclair/rastafari
project_urls =
    Bug Tracker = https://git.smhi.se/foclair/rastafari/-/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
zip_safe = False
install_requires =
    numpy
    pyproj

[options.extras_require]
test =
  pytest
  pytest-cov

[options.packages.find]
where = src

[flake8]
exclude =
    .direnv,
    .venv
extend-ignore = E203
max-line-length = 88
