[metadata]
name = rastafari2
version = attr: rastafari.__version__
author = Eef van Dongen, David Segersson
author_email = foluftadmin@smhi.se
description = Rasterize vector features to grids
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.smhi.se/foclair/rastafari
project_urls =
    Bug Tracker = https://git.smhi.se/foclair/rastafari/-/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    numpy
    pyproj

[options.extras_require]
test =
  mypy
  pytest
  pytest-cov

[options.packages.find]
where = src

[options.package_data]
rastafari =
  core.pyi
  py.typed

[flake8]
exclude =
    .direnv,
    .venv
extend-ignore = E203
max-line-length = 88

[black]
exclude =
    .direnv,
    .venv
